# fastpay

./: Cargo.toml
.claude/: settings.local.json
.github/workflows/: rust.yml
fastpay/: Cargo.toml
fastpay/src/: bench.rs  client.rs  config.rs  network.rs  server.rs  transport.rs
fastpay/src/unit_tests/: transport_tests.rs
fastpay_core/: Cargo.toml
fastpay_core/src/: authority.rs  base_types.rs  client.rs  committee.rs  error.rs  generate_format.rs  serialize.rs
fastpay_core/src/unit_tests/: client_tests.rs
scripts/: bench.sh
