[package]
name = "fastpay_core"
version = "0.1.0"
authors = ["Libra <oncall+libra@xmail.facebook.com>"]
publish = false
edition = "2024"

[dependencies]
base64 = "0.22"
bcs = "0.1"
bincode = "1"
thiserror = "2"
anyhow = "1"
futures = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ed25519 = "2"
ed25519-dalek = { version = "2", features = ["batch", "serde"] }
serde-name = "0.2"

[dev-dependencies]
similar-asserts = "1"
serde-reflection = "0.4"
serde_yaml = "0.8"
clap = { version = "4", features = ["derive"] }

[[example]]
name = "generate-format"
path = "src/generate_format.rs"
test = false

